--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -37,3 +37,61 @@
     100% {
     }
 }
+
+button {
+    border: solid 2px;
+    padding: .5rem;
+    border-radius: 0.25rem;
+    font-weight: 700;
+  }
+  
+  .container {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+  }
+  
+  .card {
+    margin-top: 1rem;
+    height: 300px;
+    width: 250px;
+    position: relative;
+    border-radius: 0.25rem;
+  }
+  
+  .cardFront, .cardBack {
+    background-color: red;
+    box-sizing: border-box;
+    border-radius: 0.25rem;
+    /* height: 100%; */
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    /* width: 100%; */
+    transition: transform 0.5s ease;
+    position: absolute;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    background-color: #ebf4ff;
+    
+  }
+  .cardBack {
+    transform: perspective(1000px) rotateY(180deg);
+  }
+  
+  .cardBack.flipped {
+    transform: perspective(1000px) rotateY(0deg);
+  }
+  
+  .cardFront {
+    transform: perspective(1000px) rotateY(0deg);
+  }
+  
+  .cardFront.flipped {
+    transform: perspective(1000px) rotateY(-180deg);
+  }
+  
+  
