--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div>
 
 
-<!-- 
+    <!-- 
 
     <div *ngFor="let card of cards;">
         {{card.cardValue}}
@@ -21,17 +21,28 @@
         </div>
     </div>
 
-
+    <!--DEALER-->
     <div class="row mb-5">
         <div *ngFor="let card of dealerCards; let i = index;" class="col d-flex justify-content-center">
             <img src="{{card.cardName}}" [ngClass]="{'right-transition' : i === dealerCards.length -1}">
+            <!-- <div class="cardFront" [ngClass]="{'right-transition' : i === dealerCards.length -1}">Back</div> -->
         </div>
+
+        <!-- <div class="card" (click)="handleFlip()">
+            <div #back id="back" class="cardBack">Back</div>
+            <div #front id="front" class="cardFront">Front</div>
+        </div> -->
 
         <div class="col-2 ">
             <div class="row">
                 <div class="col">
                     <button class="btn btn-danger mt-5" (click)="addDealerCard()">
                         Hit
+                    </button>
+                </div>
+                <div class="col">
+                    <button class="btn btn-danger mt-5" (click)="dealCards()">
+                        Deal cards
                     </button>
                 </div>
             </div>
@@ -50,7 +61,7 @@
         </div>
     </div>
 
-
+    <!--PLAYER-->
     <div class="row mt-5">
         <div *ngFor="let card of playerCards; let i = index;" class="col d-flex justify-content-center mt-5">
             <img src="{{card.cardName}}" [ngClass]="{'right-transition' : i === playerCards.length -1}">
@@ -63,7 +74,7 @@
                         Stay
                     </button>
                 </div>
-                
+
                 <div class="col">
                     <button class="btn btn-primary mt-5" (click)="addPlayerCard()">
                         Hit
